crates/aven-check/tests/fixtures/check/invalid/named-family-self-signature.av
RankRow = {
  value: Int
  same(other: Self): Bool =>
    .value == .value
}
